--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <section class="about section" id="about">
          <div class="about--container container grid">
             <h2 class="section--title-1">
-               Abouot Me.
+               <span>About Me.</span>
             </h2>
             <div class="about--profile">
                <div class="about--image">
@@ -134,18 +134,163 @@
                      React, Git & GitHub, Bootstrap, React.
                   </li>
                </ul>
+               <div class="about--buttons">
+                  <a href="#contact" class="buttons">
+                     <i class="ri-send-plane-line">Contact Me</i>
+
+                  </a>
+                  <a href="https://www.linkedin.com/" target="_blank" class="button--ghost">
+                     <i class="ri-linkedin-box-line"></i>
+                  </a>
+               </div>
             </div>
          </div>
       </section>
 
       <!--==================== SERVICES ====================-->
       <section class="services section">
+         <h2 class="section--title-2">
+            <span>Services.</span>
+         </h2>
+         <div class="services--container container grid">
+            <article class="services--card">
+               <div class="services--border"></div>
+               <div class="services--content">
+                  <div class="services--icon">
+                     <div class="services--box"> </div>
+                     <i class="ri-layout-4-line"></i>
+                  </div>
+                  <h2 class="services--title"> Web Design</h2>
+                  <p class="services--description">
+                     Beautiful and elegant designs with
+                     interfaces that are intuitive, efficient
+                     and pleasant to use for the user.
+                  </p>
+               </div>
+            </article>
 
+            <article class="services--card">
+               <div class="services--border"></div>
+               <div class="services--content">
+                  <div class="services--icon">
+                     <div class="services--box"> </div>
+                     <i class="ri-code-box-line"></i>
+                  </div>
+                  <h2 class="services--title">Development</h2>
+                  <p class="services--description">
+                     Custom web development tailored to your
+                     specifications, designed to provide a
+                     flawless user experience.
+
+                  </p>
+               </div>
+            </article>
+
+            <article class="services--card">
+               <div class="services--border"></div>
+               <div class="services--content">
+                  <div class="services--icon">
+                     <div class="services--box"> </div>
+                     <i class="ri-wordpress-line"></i>
+                  </div>
+                  <h2 class="services--title">WordPress</h2>
+                  <p class="services--description">
+                     Leverage our WordPress development expertise to bring your website concepts to life.
+                  </p>
+               </div>
+            </article>
+         </div>
       </section>
 
       <!--==================== PROJECTS ====================-->
       <section class="projects section" id="projects">
+         <h2 class="section--title-1">
+            <span>Projects.</span>
+         </h2>
+         <div class="projects--container container grid">
+            <article class="projects--card">
+               <div class="projects--image">
+                  <img src="assets/img/hasnain-project.png" alt="" class="projects--img">
+                  <a href="#" class="projects--buttons buttons">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects--content">
+                  <h3 class="projects--subtitle">WordPress Website</h3>
+                  <h2 class="projects--title">Personal Portfolio</h2>
+                  <p class="project--description">
+                     Undertook a WordPress portfolio project, focusing on design and layout to create a professional online presence that effectively highlights my skills and experience.
+                  </p>
+               </div>
 
+               <div class="projects--buttons">
+                  <a href="#" target="_blank" class="projects--links">
+                     <i class="ri-github-line"></i> View
+                  </a>
+
+                  <a href="#" target="_blank" class="projects--links">
+                     <i class="ri-dribbble-line"></i>View
+                  </a>
+               </div>
+
+            </article>
+
+            <article class="projects--card">
+               <div class="projects--image">
+                  <img src="assets/img/hasnian-project1.png" alt="" class="projects--img">
+                  <a href="#" class="projects--buttons buttons">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects--content">
+                  <h3 class="projects--subtitle">Website</h3>
+                  <h2 class="projects--title">NetFlix Clone</h2>
+                  <p class="project--description">
+                     Successfully replicated the Netflix user interface, paying close attention to design and structure to deliver an immersive user experience using HTML and CSS.
+                  </p>
+               </div>
+
+               <div class="projects--buttons">
+                  <a href="#" target="_blank" class="projects--links">
+                     <i class="ri-github-line"></i> View
+                  </a>
+
+                  <a href="#" target="_blank" class="projects--links">
+                     <i class="ri-dribbble-line"></i>View
+                  </a>
+               </div>
+
+            </article>
+
+            <article class="projects--card">
+               <div class="projects--image">
+                  <img src="assets/img/hasnain-project2.png" alt="" class="projects--img">
+                  <a href="#" class="projects--buttons buttons">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects--content">
+                  <h3 class="projects--subtitle">Website</h3>
+                  <h2 class="projects--title">Animated Log In Form</h2>
+                  <p class="project--description">
+                     Developed an interactive and visually appealing login form by combining HTML, CSS, JavaScript, jQuery, and Bootstrap, demonstrating expertise in dynamic design and user interaction.
+                  </p>
+               </div>
+
+               <div class="projects--buttons">
+                  <a href="#" target="_blank" class="projects--links">
+                     <i class="ri-github-line"></i> View
+                  </a>
+
+                  <a href="#" target="_blank" class="projects--links">
+                     <i class="ri-dribbble-line"></i>View
+                  </a>
+               </div>
+
+            </article>
+
+
+         </div>
       </section>
 
       <!--==================== CONTACT ====================-->
