--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <article class="projects--card">
                <div class="projects--image">
                   <img src="assets/img/hasnain-project.png" alt="" class="projects--img">
-                  <a href="#" class="projects--buttons buttons">
+                  <a href="#" class="projects--button buttons">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
                </div>
@@ -219,44 +219,18 @@
                   <h3 class="projects--subtitle">WordPress Website</h3>
                   <h2 class="projects--title">Personal Portfolio</h2>
                   <p class="project--description">
-                     Undertook a WordPress portfolio project, focusing on design and layout to create a professional online presence that effectively highlights my skills and experience.
+                     Undertook a WordPress portfolio project, focusing on design and layout to create a professional
+                     online presence that effectively highlights my skills and experience.
                   </p>
                </div>
 
                <div class="projects--buttons">
-                  <a href="#" target="_blank" class="projects--links">
+                  <a href="#" target="_blank" class="projects-link">
                      <i class="ri-github-line"></i> View
                   </a>
 
-                  <a href="#" target="_blank" class="projects--links">
-                     <i class="ri-dribbble-line"></i>View
-                  </a>
-               </div>
-
-            </article>
-
-            <article class="projects--card">
-               <div class="projects--image">
-                  <img src="assets/img/hasnian-project1.png" alt="" class="projects--img">
-                  <a href="#" class="projects--buttons buttons">
-                     <i class="ri-arrow-right-up-line"></i>
-                  </a>
-               </div>
-               <div class="projects--content">
-                  <h3 class="projects--subtitle">Website</h3>
-                  <h2 class="projects--title">NetFlix Clone</h2>
-                  <p class="project--description">
-                     Successfully replicated the Netflix user interface, paying close attention to design and structure to deliver an immersive user experience using HTML and CSS.
-                  </p>
-               </div>
-
-               <div class="projects--buttons">
-                  <a href="#" target="_blank" class="projects--links">
-                     <i class="ri-github-line"></i> View
-                  </a>
-
-                  <a href="#" target="_blank" class="projects--links">
-                     <i class="ri-dribbble-line"></i>View
+                  <a href="#" target="_blank" class="projects-link">
+                     <i class="ri-dribbble-line"></i> View
                   </a>
                </div>
 
@@ -265,7 +239,7 @@
             <article class="projects--card">
                <div class="projects--image">
                   <img src="assets/img/hasnain-project2.png" alt="" class="projects--img">
-                  <a href="#" class="projects--buttons buttons">
+                  <a href="#" class="projects--button buttons">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
                </div>
@@ -273,21 +247,53 @@
                   <h3 class="projects--subtitle">Website</h3>
                   <h2 class="projects--title">Animated Log In Form</h2>
                   <p class="project--description">
-                     Developed an interactive and visually appealing login form by combining HTML, CSS, JavaScript, jQuery, and Bootstrap, demonstrating expertise in dynamic design and user interaction.
+                     Developed an interactive and visually appealing login form by combining HTML, CSS, JavaScript,
+                     jQuery, and Bootstrap, demonstrating expertise in dynamic design and user interaction.
                   </p>
                </div>
 
                <div class="projects--buttons">
-                  <a href="#" target="_blank" class="projects--links">
+                  <a href="#" target="_blank" class="projects-link">
                      <i class="ri-github-line"></i> View
                   </a>
 
-                  <a href="#" target="_blank" class="projects--links">
-                     <i class="ri-dribbble-line"></i>View
+                  <a href="#" target="_blank" class="projects-link">
+                     <i class="ri-dribbble-line"></i> View
                   </a>
                </div>
 
             </article>
+
+            <article class="projects--card">
+               <div class="projects--image">
+                  <img src="assets/img/hasnian-project1.png" alt="" class="projects--img">
+                  <a href="#" class="projects--button buttons">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects--content">
+                  <h3 class="projects--subtitle">Website</h3>
+                  <h2 class="projects--title">Netflix Clone</h2>
+                  <p class="project--description">
+                     Successfully replicated the Netflix user interface, paying close attention to design and structure
+                     to deliver an immersive user experience using HTML and CSS.
+                  </p>
+               </div>
+
+               <div class="projects--buttons">
+                  <a href="#" target="_blank" class="projects-link">
+                     <i class="ri-github-line"></i> View
+                  </a>
+
+                  <a href="#" target="_blank" class="projects-link">
+                     <i class="ri-dribbble-line"></i> View
+                  </a>
+               </div>
+
+            </article>
+
+
+
 
 
          </div>
@@ -295,7 +301,95 @@
 
       <!--==================== CONTACT ====================-->
       <section class="contact section" id="contact">
+         <div class="contact--container grid">
+            <div class="contact--data">
+               <h2 class="section--title-2">
+                  <span>Contact Me.</span>
+               </h2>
 
+               <p class="contact--description-1">
+                  I will read all emails. Send me any
+                  message you want and I'll get back to you.
+               </p>
+
+               <p class="contact--description-2">
+                  I need your <b>Name</b> and <b>Email Address</b>, but
+                  you won't receive anything other than your reply.
+               </p>
+
+               <div class="geometric-box"></div>
+            </div>
+
+            <div class="contact--mail">
+               <h2 class="contact--title">
+                  Send Me A Message
+               </h2>
+
+               <form action="" class="contact--form" id="contact-form">
+                  <div class="contact--group">
+                     <div class="contact--box">
+                        <input type="text" name="user_name" class="contact--input" id="name" required
+                           placeholder="Name">
+                        <label for="name" class="contact--label">First Name</label>
+                     </div>
+
+                     <div class="contact--box">
+                        <input type="email" name="user_email" class="contact--input" id="email" required
+                           placeholder="Email Address">
+                        <label for="email" class="contact--label">Email Address</label>
+                     </div>
+                  </div>
+
+                  <div class="contact--box">
+                     <input type="text" name="user_subject" class="contact--input" id="subject" required
+                        placeholder="Subject">
+                     <label for="subject" class="contact--label">Subject</label>
+                  </div>
+
+                  <div class="contact--box contact--area">
+
+                     <textarea name="user_message" id="message" class="contact--input" required
+                        placeholder="Message"></textarea>
+                     <label for="message" class="contact--label">Message</label>
+                  </div>
+
+                  <p class="contact--message" id="contact-message"></p>
+
+                  <button type="submit" class="contact--button buttons">
+                     <i class="ri-send-plane-line"></i> Send Message
+                  </button>
+               </form>
+            </div>
+            <div class="contact--social">
+               <img src="assets/img/curved-arrow.svg" alt="" class="contact--social-arrow">
+
+               <div class="contact--social-data">
+                  <div>
+                     <p class="contact--social-description-1">
+                        Does not send emails
+                     </p>
+
+                     <p class="contact--social-description-2">
+                        Write me on my social networks
+                     </p>
+                  </div>
+
+                  <div class="contact--social-links">
+                     <a href="#" target="_blank" class="contact--social-link">
+                        <i class="ri-facebook-line"></i>
+                     </a>
+
+                     <a href="#" target="_blank" class="contact--social-link">
+                        <i class="ri-instagram-line"></i>
+                     </a>
+
+                     <a href="#" target="_blank" class="contact--social-link">
+                        <i class="ri-linkedin-line"></i>
+                     </a>
+                  </div>
+               </div>
+            </div>
+         </div>
       </section>
    </main>
 
@@ -311,7 +405,8 @@
    <script src=""></script>
 
    <!--=============== EMAIL JS ===============-->
-
+   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+   </script>
 
    <!--=============== MAIN JS ===============-->
    <script src="assets/js/main.js"></script>
