--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <ul class="nav--list">
                <li class="nav--item">
-                  <a href="#home" class="nav--link">Home</a>
+                  <a href="#home" class="nav--link active-link">Home</a>
                </li>
 
                <li class="nav--item">
@@ -43,7 +43,7 @@
                </li>
 
                <li class="nav--item">
-                  <a href="#contact" class="nav--link">Contact Me</a>
+                  <a href="#contact" class="nav--link nav--link-buttonn">Contact Me</a>
                </li>
             </ul>
 
@@ -395,14 +395,35 @@
 
    <!--==================== FOOTER ====================-->
    <footer class="footer">
+      <div class="footer--container container grid">
+         <ul class="footer--links">
+            <li>
+               <a href="#about" class="footer--link">About</a>
+            </li>
 
+            <li>
+               <a href="#services" class="footer--link">Services</a>
+            </li>
+
+            <li>
+               <a href="#projects" class="footer--link">Projects</a>
+            </li>
+         </ul>
+
+         <span class="footer--copy">
+            &#169; All Rights Reserved By
+            <a href="#">Hasnain.</a>
+         </span>
+      </div>
    </footer>
 
    <!--========== SCROLL UP ==========-->
-
+   <a href="#" class="scrollup" id="scroll-uo">
+      <i class="ri-arrow-up-s-line"></i>
+   </a>
 
    <!--=============== SCROLLREVEAL ===============-->
-   <script src=""></script>
+   <script src="assets/js/scrollreveal.min.js"></script>
 
    <!--=============== EMAIL JS ===============-->
    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
